# Swagger/src/swagger-config.yaml
@@ -65,7 +65,7 @@ paths:
                 type: object
                 items: {}
         401:
-          description: Access permission denied"
+          description: Access permission denied
           content:
             application/json:
               schema:
@@ -78,7 +78,57 @@ paths:
               schema:
                 type: object
                 items: {}
-  /Modules/Facturacion/Company/Config/{nit}:
+  /modules/facturacion/listings/rows/{source}/{id}:
+    get:
+      tags:
+        - "Listados"
+      summary: "(ES): Listado de configuraciones y valores DIAN. (EN): List of DIAN configurations and values."
+      produces:
+        - "application/json"
+      parameters:
+        - name: source
+          in: path
+          description: recurso y/o esquema
+          required: true
+          type: string
+          format: string
+        - name: id
+          in: path
+          description: identificador
+          required: false
+          type: integer
+          format: int
+          default:
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        500:
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+  /modules/facturacion/company/config/{nit}:
     get:
       tags:
         - "Empresas"
@@ -263,7 +313,6 @@ paths:
                 language_id: 53
                 tax_id: 1
                 type_environment_id: 2
-                type_document_identification_id: 6
                 country_id: 52
                 type_currency_id: 52
                 type_regime_id: 1
@@ -312,6 +361,502 @@ paths:
                 items: {}
         "500":
           description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+
+          post:
+        tags:
+          - Empresas
+        summary: "(ES): Creación de empresa. (EN): Create company."
+        parameters:
+          - name: nit
+            in: path
+            description: NIT de empresa"
+            required: true
+            schema:
+              type: integer
+        requestBody:
+          description: Objeto para actualizar la empresa.
+          required: true
+          content:
+            application/json:
+              schema:
+                required:
+                  - nit_type_id
+                  - type_organization_id
+                  - type_regime_id
+                  - liability_id
+                  - business_name
+                  - merchant_registration
+                  - municipality_id
+                  - address
+                  - phone
+                  - email
+                properties:
+                  name:
+                    description: Nombre de la empresa
+                    type: string
+                  business_name:
+                    description: Nombre comercial
+                    type: string
+                  identification_number:
+                    description: NIT/CC
+                    type: integer
+                  language_id:
+                    description: Código de idioma
+                    type: integer
+                    default: 53
+                  tax_id:
+                    description: Código de impuesto
+                    type: integer
+                    default: 1
+                  type_environment_id:
+                    description: Código del ambiente
+                    type: integer
+                    default: 2
+                  nit_type_id:
+                    description: Código de tipo de documento de identificación
+                    type: integer
+                    default: 6
+                  country_id:
+                    description: Código del pais
+                    type: integer
+                    default: 53
+                  type_currency_id:
+                    description: Código del tipo moneda por defecto
+                    type: integer
+                    default: 52
+                  type_organization_id:
+                    description: Código del tipo organización
+                    type: integer
+                  type_regime_id:
+                    description: Código del tipo regimen
+                    type: integer
+                    default: 1
+                  liability_id:
+                    description: Código del tipo responsabilidad
+                    type: integer
+                  municipality_id:
+                    description: Código del municipio
+                    type: integer
+                    default: 111
+                  merchant_registration:
+                    description: Matrícula mercantil
+                    type: string
+                    default: N/A
+                  software_id:
+                    description: Identificador del software (DIAN)
+                    type: string
+                  pin:
+                    description: Pin del software (DIAN)
+                    type: string
+                  test_id:
+                    description: Código del SET de pruebas (DIAN).
+                    type: string
+                  printing_format:
+                    description: Formato de representación gráfica
+                    type: string
+                    default: "1"
+                  send_method:
+                    description: "Método de envio de documentos (DIAN: SendBillSync = 1, SendBillAsync = 2, SendTestSetAsync = 3)"
+                    type: integer
+                    default: 3
+                  address:
+                    description: Dirección
+                    type: string
+                  phone:
+                    description: Teléfono
+                    type: integer
+                  email:
+                    description: Correo electrónico
+                    type: string
+                    format: email
+                  certificate:
+                    description: Certificado para firma electrónica (.pfx) codificado en base64
+                    type: string
+                  certificate_password:
+                    description: Contraseña de certificado
+                    type: string
+                  certificate_validity:
+                    description: Vigencia del certificado en formato yyyy-mm-dd
+                    type: date
+                  host_email:
+                    description: Host/servidor de correo smtp
+                    type: string
+                  host_port:
+                    description: Puerto del host/servidor de correo smtp
+                    type: string
+                  host_username:
+                    description: Cuenta de correo para el envío de documento (correo@miempresa.com)
+                    type: string
+                  host_password:
+                    description: Contraseña de cuenta de correo para el envío de documento
+                    type: string
+                  image:
+                    description: Logo de la empresa codificado en base 64
+                    type: string
+                  status:
+                    description: Estado de la empresa
+                    type: integer
+                    default: 1
+                example:
+                  name: PLENUSSERIVCES S.A.S
+                  business_name: Plenus Services
+                  identification_number: 901004305
+                  language_id: 53
+                  tax_id: 1
+                  type_environment_id: 2
+                  country_id: 52
+                  type_currency_id: 52
+                  type_regime_id: 1
+                  liability_id: 1
+                  nit_type_id: 6
+                  municipality_id: 111
+                  merchant_registration: A25584542
+                  address: AV siempre viva 742
+                  phone: 94268952
+                  email: correo@miempresa.com
+        responses:
+          "200":
+            description: OK
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+          "400":
+            description: Bad Request
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+          "401":
+            description: Unauthorized
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+          "404":
+            description: Not Found
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+          "422":
+            description: Unprocessable Entity
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+          "500":
+            description: Internal Server Error
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+      delete:
+        tags:
+          - "Listados"
+        summary: "(ES): Listado de configuraciones y valores DIAN. (EN): List of DIAN configurations and values."
+        produces:
+          - "application/json"
+        parameters:
+          - name: source
+            in: path
+            description: recurso y/o esquema
+            required: true
+            type: string
+            format: string
+          - name: id
+            in: path
+            description: identificador
+            required: false
+            type: integer
+            format: int
+            default:
+        responses:
+          200:
+            description: Ok
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+          401:
+            description: Unauthorized
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+          404:
+            description: Not Found
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+          500:
+            description: Server error
+            content:
+              application/json:
+                schema:
+                  type: object
+                  items: {}
+    post:
+      tags:
+        - Empresas
+      summary: "(ES): Creación de empresa. (EN): Create company."
+      parameters:
+        - name: nit
+          in: path
+          description: NIT de empresa"
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        description: Objeto para actualizar la empresa.
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+                - name 
+                - business_name
+                - identification_number
+                - nit_type_id
+                - language_id
+                - tax_id
+                - nit_type_id
+                - type_organization_id
+                - type_regime_id
+                - liability_id
+                - merchant_registration
+                - municipality_id
+                - address
+                - phone
+                - email
+              properties:
+                name:
+                  description: Nombre de la empresa
+                  type: string
+                business_name:
+                  description: Nombre comercial
+                  type: string
+                identification_number:
+                  description: NIT/CC
+                  type: integer
+                language_id:
+                  description: Código de idioma
+                  type: integer
+                  default: 53
+                tax_id:
+                  description: Código de impuesto
+                  type: integer
+                  default: 1
+                type_environment_id:
+                  description: Código del ambiente
+                  type: integer
+                  default: 2
+                nit_type_id:
+                  description: Código de tipo de documento de identificación
+                  type: integer
+                  default: 6
+                country_id:
+                  description: Código del pais
+                  type: integer
+                  default: 53
+                type_currency_id:
+                  description: Código del tipo moneda por defecto
+                  type: integer
+                  default: 52
+                type_organization_id:
+                  description: Código del tipo organización
+                  type: integer
+                type_regime_id:
+                  description: Código del tipo regimen
+                  type: integer
+                  default: 1
+                liability_id:
+                  description: Código del tipo responsabilidad
+                  type: integer
+                municipality_id:
+                  description: Código del municipio
+                  type: integer
+                  default: 111
+                merchant_registration:
+                  description: Matrícula mercantil
+                  type: string
+                  default: N/A
+                software_id:
+                  description: Identificador del software (DIAN)
+                  type: string
+                pin:
+                  description: Pin del software (DIAN)
+                  type: string
+                test_id:
+                  description: Código del SET de pruebas (DIAN).
+                  type: string
+                printing_format:
+                  description: Formato de representación gráfica
+                  type: string
+                  default: "1"
+                send_method:
+                  description: "Método de envio de documentos (DIAN: SendBillSync = 1, SendBillAsync = 2, SendTestSetAsync = 3)"
+                  type: integer
+                  default: 3
+                address:
+                  description: Dirección
+                  type: string
+                phone:
+                  description: Teléfono
+                  type: integer
+                email:
+                  description: Correo electrónico
+                  type: string
+                  format: email
+                certificate:
+                  description: Certificado para firma electrónica (.pfx) codificado en base64
+                  type: string
+                certificate_password:
+                  description: Contraseña de certificado
+                  type: string
+                certificate_validity:
+                  description: Vigencia del certificado en formato yyyy-mm-dd
+                  type: date
+                host_email:
+                  description: Host/servidor de correo smtp
+                  type: string
+                host_port:
+                  description: Puerto del host/servidor de correo smtp
+                  type: string
+                host_username:
+                  description: Cuenta de correo para el envío de documento (correo@miempresa.com)
+                  type: string
+                host_password:
+                  description: Contraseña de cuenta de correo para el envío de documento
+                  type: string
+                image:
+                  description: Logo de la empresa codificado en base 64
+                  type: string
+                status:
+                  description: Estado de la empresa
+                  type: integer
+                  default: 1
+              example:
+                name: PLENUSSERIVCES S.A.S
+                business_name: Plenus Services
+                identification_number: '901004305'
+                language_id: 53
+                tax_id: 1
+                type_environment_id: 2
+                country_id: 52
+                type_currency_id: 52
+                type_regime_id: 1
+                liability_id: 1
+                nit_type_id: 6
+                municipality_id: 111
+                merchant_registration: A25584542
+                printing_format: '1'
+                address: AV siempre viva 742
+                phone: 94268952
+                email: correo@miempresa.com
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        "409":
+          description: Conflict
+
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        "422":
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+    delete:
+      tags:
+        - "Empresas"
+      summary: "(ES): Eliminar empresa por nit. (EN): Company delete by nit."
+      produces:
+        - "application/json"
+      parameters:
+        - name: nit
+          in: path
+          description: NIT de empresa
+          required: true
+          type: integer
+          format: int
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: object
+                items: {}
+        500:
+          description: Server error
           content:
             application/json:
               schema:
